@startuml
'https://plantuml.com/class-diagram

abstract class Pizza{
    abstract prepare(): void
    bake(): void
    cut(): void
    box(): void
}
class MeatPizza{
    prepare(): void
}
class VegetablePizza{
    prepare(): void
}
class OrderPizza{
    order(): void
    getType(): String
}
class SimpleFactory{
    producingPizza(String type): Pizza
}

Pizza <|-- MeatPizza
Pizza <|-- VegetablePizza
SimpleFactory --o OrderPizza
MeatPizza <-- SimpleFactory
VegetablePizza <-- SimpleFactory


@enduml